--- a/less/v2/dark/character.less
+++ b/less/v2/dark/character.less
@@ -41,6 +41,7 @@
         border: 1px solid var(--dnd5e-color-blue-gray-1);
         --background-color: var(--dnd5e-color-blue-gray-2);
         background-blend-mode: soft-light;
+        &::before { opacity: unset; }
       }
     }
   }
