--- a/less/v2/dark/inventory.less
+++ b/less/v2/dark/inventory.less
@@ -1,6 +1,8 @@
 .dnd5e-theme-dark .dnd5e2,
 .dnd5e2.dnd5e-theme-dark {
   .items-section {
+    border: none;
+
     .item {
       .item-name .tags {
         --icon-fill: var(--color-text-light-6);
@@ -13,6 +15,8 @@
         &.active { color: var(--dnd5e-color-gold); }
       }
     }
+
+    .item-controls .info-control { color: var(--dnd5e-color-gold); }
   }
 
   .editable .items-section .item-controls .item-control { color: var(--color-text-light-6); }
